--- a/src/components/ProductCard/productCard.css
+++ b/src/components/ProductCard/productCard.css
@@ -46,8 +46,8 @@
   font-size: 16px;
   font-weight: 600;
   /* margin-bottom: 10px; */
-  height: 30px;
-  overflow: hidden;
+  height: 25px;
+  overflow: clip;
 }
 
 .price-rating-container {
